// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcRadioBtn :props :disabled - should render the checked radio button with a disabled attribute 1`] = `
<input
  aria-describedby=""
  class="ec-radio-btn__input"
  data-test="ec-radio-btn__input ec-radio-btn__input-0"
  disabled=""
  id="ec-radio-btn-1"
  name="ec-radio-btn-1"
  type="radio"
  value="y"
/>
`;

exports[`EcRadioBtn :props :error-message - should render the radio button with an error message 1`] = `
<div
  class="ec-radio-btn__error-text"
  data-test="ec-radio-btn__error-text"
  id="ec-radio-btn-1"
/>
`;

exports[`EcRadioBtn :props :isDisabled - should render the unchecked radio button with a disabled attribute 1`] = `
<input
  aria-describedby=""
  class="ec-radio-btn__input"
  data-test="ec-radio-btn__input ec-radio-btn__input-0"
  disabled=""
  id="ec-radio-btn-1"
  name="ec-radio-btn-1"
  type="radio"
  value=""
/>
`;

exports[`EcRadioBtn :props :isGroupInline - should render the radio buttons on a single line 1`] = `
<div
  class="ec-radio-btn__group ec-radio-btn__group--is-single-line"
  data-test="ec-radio-btn__group"
>
  
  <div
    class="ec-radio-btn"
    data-test="ec-radio-btn ec-radio-btn-0"
  >
    <input
      aria-describedby=""
      class="ec-radio-btn__input"
      data-test="ec-radio-btn__input ec-radio-btn__input-0"
      id="ec-radio-btn-1"
      name="ec-radio-btn-1"
      type="radio"
      value=""
    />
    <div
      class="ec-radio-btn__wrapper"
    >
      <div
        class="ec-radio-btn__radio-icon-wrapper"
        data-test="ec-radio-btn__radio-icon-wrapper ec-radio-btn__radio-icon-wrapper-0"
      >
        <div
          class="ec-radio-btn__radio-icon-wrapper-inner"
        >
          <svg
            class="ec-icon ec-radio-btn__radio-icon"
            height="20"
            width="20"
          >
            <use
              xlink:href="#ec-rounded-notification"
            />
          </svg>
        </div>
      </div>
      <div
        class="ec-radio-btn__radio-text-wrapper"
        data-test="ec-radio-btn__radio-text-wrapper"
      >
        <label
          class="ec-radio-btn__radio-label"
          data-test="ec-radio-btn__radio-label ec-radio-btn__radio-label-0"
          for="ec-radio-btn-1"
        >
          Yes
        </label>
        <!--v-if-->
      </div>
    </div>
  </div>
  <div
    class="ec-radio-btn tw-ml-40"
    data-test="ec-radio-btn ec-radio-btn-1"
  >
    <input
      aria-describedby=""
      class="ec-radio-btn__input"
      data-test="ec-radio-btn__input ec-radio-btn__input-1"
      id="ec-radio-btn-1"
      name="ec-radio-btn-1"
      type="radio"
      value=""
    />
    <div
      class="ec-radio-btn__wrapper"
    >
      <div
        class="ec-radio-btn__radio-icon-wrapper"
        data-test="ec-radio-btn__radio-icon-wrapper ec-radio-btn__radio-icon-wrapper-1"
      >
        <div
          class="ec-radio-btn__radio-icon-wrapper-inner"
        >
          <svg
            class="ec-icon ec-radio-btn__radio-icon"
            height="20"
            width="20"
          >
            <use
              xlink:href="#ec-rounded-notification"
            />
          </svg>
        </div>
      </div>
      <div
        class="ec-radio-btn__radio-text-wrapper"
        data-test="ec-radio-btn__radio-text-wrapper"
      >
        <label
          class="ec-radio-btn__radio-label"
          data-test="ec-radio-btn__radio-label ec-radio-btn__radio-label-1"
          for="ec-radio-btn-1"
        >
          No
        </label>
        <!--v-if-->
      </div>
    </div>
  </div>
  
</div>
`;

exports[`EcRadioBtn :props :isTextInline - should render the radio buttons text (label and description) on a single line 1`] = `
<div
  class="ec-radio-btn__radio-text-wrapper ec-radio-btn__radio-text-wrapper--is-single-line"
  data-test="ec-radio-btn__radio-text-wrapper"
>
  <label
    class="ec-radio-btn__radio-label"
    data-test="ec-radio-btn__radio-label ec-radio-btn__radio-label-0"
    for="ec-radio-btn-1"
    title="One option"
  >
    One option
  </label>
  <!--v-if-->
</div>
`;

exports[`EcRadioBtn :props :label - should render the radio button with a label 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="ec-radio-btn__label"
    data-test="ec-radio-btn__label"
  >
    Test label prop
  </div>
  <div
    class="ec-radio-btn__group"
    data-test="ec-radio-btn__group"
  >
    
    <div
      class="ec-radio-btn"
      data-test="ec-radio-btn ec-radio-btn-0"
    >
      <input
        aria-describedby=""
        class="ec-radio-btn__input"
        data-test="ec-radio-btn__input ec-radio-btn__input-0"
        id="ec-radio-btn-1"
        name="ec-radio-btn-1"
        type="radio"
        value=""
      />
      <div
        class="ec-radio-btn__wrapper"
      >
        <div
          class="ec-radio-btn__radio-icon-wrapper"
          data-test="ec-radio-btn__radio-icon-wrapper ec-radio-btn__radio-icon-wrapper-0"
        >
          <div
            class="ec-radio-btn__radio-icon-wrapper-inner"
          >
            <svg
              class="ec-icon ec-radio-btn__radio-icon"
              height="20"
              width="20"
            >
              <use
                xlink:href="#ec-rounded-notification"
              />
            </svg>
          </div>
        </div>
        <div
          class="ec-radio-btn__radio-text-wrapper"
          data-test="ec-radio-btn__radio-text-wrapper"
        >
          <label
            class="ec-radio-btn__radio-label"
            data-test="ec-radio-btn__radio-label ec-radio-btn__radio-label-0"
            for="ec-radio-btn-1"
          >
            Yes
          </label>
          <!--v-if-->
        </div>
      </div>
    </div>
    <div
      class="ec-radio-btn tw-mt-16"
      data-test="ec-radio-btn ec-radio-btn-1"
    >
      <input
        aria-describedby=""
        class="ec-radio-btn__input"
        data-test="ec-radio-btn__input ec-radio-btn__input-1"
        id="ec-radio-btn-1"
        name="ec-radio-btn-1"
        type="radio"
        value=""
      />
      <div
        class="ec-radio-btn__wrapper"
      >
        <div
          class="ec-radio-btn__radio-icon-wrapper"
          data-test="ec-radio-btn__radio-icon-wrapper ec-radio-btn__radio-icon-wrapper-1"
        >
          <div
            class="ec-radio-btn__radio-icon-wrapper-inner"
          >
            <svg
              class="ec-icon ec-radio-btn__radio-icon"
              height="20"
              width="20"
            >
              <use
                xlink:href="#ec-rounded-notification"
              />
            </svg>
          </div>
        </div>
        <div
          class="ec-radio-btn__radio-text-wrapper"
          data-test="ec-radio-btn__radio-text-wrapper"
        >
          <label
            class="ec-radio-btn__radio-label"
            data-test="ec-radio-btn__radio-label ec-radio-btn__radio-label-1"
            for="ec-radio-btn-1"
          >
            No
          </label>
          <!--v-if-->
        </div>
      </div>
    </div>
    
  </div>
  <!--v-if-->
  
</div>
`;

exports[`EcRadioBtn :props :label - should render the radio button without a label 1`] = `
<div
  data-v-app=""
>
  
  <!--v-if-->
  <div
    class="ec-radio-btn__group"
    data-test="ec-radio-btn__group"
  >
    
    <div
      class="ec-radio-btn"
      data-test="ec-radio-btn ec-radio-btn-0"
    >
      <input
        aria-describedby=""
        class="ec-radio-btn__input"
        data-test="ec-radio-btn__input ec-radio-btn__input-0"
        id="ec-radio-btn-1"
        name="ec-radio-btn-1"
        type="radio"
        value=""
      />
      <div
        class="ec-radio-btn__wrapper"
      >
        <div
          class="ec-radio-btn__radio-icon-wrapper"
          data-test="ec-radio-btn__radio-icon-wrapper ec-radio-btn__radio-icon-wrapper-0"
        >
          <div
            class="ec-radio-btn__radio-icon-wrapper-inner"
          >
            <svg
              class="ec-icon ec-radio-btn__radio-icon"
              height="20"
              width="20"
            >
              <use
                xlink:href="#ec-rounded-notification"
              />
            </svg>
          </div>
        </div>
        <div
          class="ec-radio-btn__radio-text-wrapper"
          data-test="ec-radio-btn__radio-text-wrapper"
        >
          <label
            class="ec-radio-btn__radio-label"
            data-test="ec-radio-btn__radio-label ec-radio-btn__radio-label-0"
            for="ec-radio-btn-1"
          >
            Yes
          </label>
          <!--v-if-->
        </div>
      </div>
    </div>
    <div
      class="ec-radio-btn tw-mt-16"
      data-test="ec-radio-btn ec-radio-btn-1"
    >
      <input
        aria-describedby=""
        class="ec-radio-btn__input"
        data-test="ec-radio-btn__input ec-radio-btn__input-1"
        id="ec-radio-btn-1"
        name="ec-radio-btn-1"
        type="radio"
        value=""
      />
      <div
        class="ec-radio-btn__wrapper"
      >
        <div
          class="ec-radio-btn__radio-icon-wrapper"
          data-test="ec-radio-btn__radio-icon-wrapper ec-radio-btn__radio-icon-wrapper-1"
        >
          <div
            class="ec-radio-btn__radio-icon-wrapper-inner"
          >
            <svg
              class="ec-icon ec-radio-btn__radio-icon"
              height="20"
              width="20"
            >
              <use
                xlink:href="#ec-rounded-notification"
              />
            </svg>
          </div>
        </div>
        <div
          class="ec-radio-btn__radio-text-wrapper"
          data-test="ec-radio-btn__radio-text-wrapper"
        >
          <label
            class="ec-radio-btn__radio-label"
            data-test="ec-radio-btn__radio-label ec-radio-btn__radio-label-1"
            for="ec-radio-btn-1"
          >
            No
          </label>
          <!--v-if-->
        </div>
      </div>
    </div>
    
  </div>
  <!--v-if-->
  
</div>
`;

exports[`EcRadioBtn focus should be checked and focused 1`] = `
<body>
  <div>
    <div
      data-v-app=""
    />
  </div>
  <div>
    <div
      data-v-app=""
    >
      
      <!--v-if-->
      <div
        class="ec-radio-btn__group"
        data-test="ec-radio-btn__group"
      >
        
        <div
          class="ec-radio-btn"
          data-test="ec-radio-btn ec-radio-btn-0"
        >
          <input
            aria-describedby=""
            class="ec-radio-btn__input"
            data-test="ec-radio-btn__input ec-radio-btn__input-0"
            id="ec-radio-btn-1"
            name="ec-radio-btn-1"
            type="radio"
            value="y"
          />
          <div
            class="ec-radio-btn__wrapper"
          >
            <div
              class="ec-radio-btn__radio-icon-wrapper ec-radio-btn__radio-icon-wrapper--checked-and-focused"
              data-test="ec-radio-btn__radio-icon-wrapper ec-radio-btn__radio-icon-wrapper-0"
            >
              <div
                class="ec-radio-btn__radio-icon-wrapper-inner"
              >
                <svg
                  class="ec-icon ec-radio-btn__radio-icon ec-radio-btn__radio-icon--checked"
                  height="20"
                  width="20"
                >
                  <use
                    xlink:href="#ec-rounded-notification"
                  />
                </svg>
              </div>
            </div>
            <div
              class="ec-radio-btn__radio-text-wrapper"
              data-test="ec-radio-btn__radio-text-wrapper"
            >
              <label
                class="ec-radio-btn__radio-label"
                data-test="ec-radio-btn__radio-label ec-radio-btn__radio-label-0"
                for="ec-radio-btn-1"
              >
                Yes
              </label>
              <!--v-if-->
            </div>
          </div>
        </div>
        <div
          class="ec-radio-btn tw-mt-16"
          data-test="ec-radio-btn ec-radio-btn-1"
        >
          <input
            aria-describedby=""
            class="ec-radio-btn__input"
            data-test="ec-radio-btn__input ec-radio-btn__input-1"
            id="ec-radio-btn-1"
            name="ec-radio-btn-1"
            type="radio"
            value="y"
          />
          <div
            class="ec-radio-btn__wrapper"
          >
            <div
              class="ec-radio-btn__radio-icon-wrapper"
              data-test="ec-radio-btn__radio-icon-wrapper ec-radio-btn__radio-icon-wrapper-1"
            >
              <div
                class="ec-radio-btn__radio-icon-wrapper-inner"
              >
                <svg
                  class="ec-icon ec-radio-btn__radio-icon"
                  height="20"
                  width="20"
                >
                  <use
                    xlink:href="#ec-rounded-notification"
                  />
                </svg>
              </div>
            </div>
            <div
              class="ec-radio-btn__radio-text-wrapper"
              data-test="ec-radio-btn__radio-text-wrapper"
            >
              <label
                class="ec-radio-btn__radio-label"
                data-test="ec-radio-btn__radio-label ec-radio-btn__radio-label-1"
                for="ec-radio-btn-1"
              >
                No
              </label>
              <!--v-if-->
            </div>
          </div>
        </div>
        
      </div>
      <!--v-if-->
      
    </div>
  </div>
</body>
`;

exports[`EcRadioBtn focus should be checked and focused 2`] = `
<div
  class="ec-radio-btn__radio-icon-wrapper ec-radio-btn__radio-icon-wrapper--checked-and-focused"
  data-test="ec-radio-btn__radio-icon-wrapper ec-radio-btn__radio-icon-wrapper-0"
>
  <div
    class="ec-radio-btn__radio-icon-wrapper-inner"
  >
    <svg
      class="ec-icon ec-radio-btn__radio-icon ec-radio-btn__radio-icon--checked"
      height="20"
      width="20"
    >
      <use
        xlink:href="#ec-rounded-notification"
      />
    </svg>
  </div>
</div>
`;

exports[`EcRadioBtn focus should be focused 1`] = `
<body>
  <div>
    <div
      data-v-app=""
    >
      
      <!--v-if-->
      <div
        class="ec-radio-btn__group"
        data-test="ec-radio-btn__group"
      >
        
        <div
          class="ec-radio-btn"
          data-test="ec-radio-btn ec-radio-btn-0"
        >
          <input
            aria-describedby=""
            class="ec-radio-btn__input"
            data-test="ec-radio-btn__input ec-radio-btn__input-0"
            id="ec-radio-btn-1"
            name="ec-radio-btn-1"
            type="radio"
            value=""
          />
          <div
            class="ec-radio-btn__wrapper"
          >
            <div
              class="ec-radio-btn__radio-icon-wrapper ec-radio-btn__radio-icon-wrapper--focused"
              data-test="ec-radio-btn__radio-icon-wrapper ec-radio-btn__radio-icon-wrapper-0"
            >
              <div
                class="ec-radio-btn__radio-icon-wrapper-inner"
              >
                <svg
                  class="ec-icon ec-radio-btn__radio-icon"
                  height="20"
                  width="20"
                >
                  <use
                    xlink:href="#ec-rounded-notification"
                  />
                </svg>
              </div>
            </div>
            <div
              class="ec-radio-btn__radio-text-wrapper"
              data-test="ec-radio-btn__radio-text-wrapper"
            >
              <label
                class="ec-radio-btn__radio-label"
                data-test="ec-radio-btn__radio-label ec-radio-btn__radio-label-0"
                for="ec-radio-btn-1"
              >
                Yes
              </label>
              <!--v-if-->
            </div>
          </div>
        </div>
        <div
          class="ec-radio-btn tw-mt-16"
          data-test="ec-radio-btn ec-radio-btn-1"
        >
          <input
            aria-describedby=""
            class="ec-radio-btn__input"
            data-test="ec-radio-btn__input ec-radio-btn__input-1"
            id="ec-radio-btn-1"
            name="ec-radio-btn-1"
            type="radio"
            value=""
          />
          <div
            class="ec-radio-btn__wrapper"
          >
            <div
              class="ec-radio-btn__radio-icon-wrapper"
              data-test="ec-radio-btn__radio-icon-wrapper ec-radio-btn__radio-icon-wrapper-1"
            >
              <div
                class="ec-radio-btn__radio-icon-wrapper-inner"
              >
                <svg
                  class="ec-icon ec-radio-btn__radio-icon"
                  height="20"
                  width="20"
                >
                  <use
                    xlink:href="#ec-rounded-notification"
                  />
                </svg>
              </div>
            </div>
            <div
              class="ec-radio-btn__radio-text-wrapper"
              data-test="ec-radio-btn__radio-text-wrapper"
            >
              <label
                class="ec-radio-btn__radio-label"
                data-test="ec-radio-btn__radio-label ec-radio-btn__radio-label-1"
                for="ec-radio-btn-1"
              >
                No
              </label>
              <!--v-if-->
            </div>
          </div>
        </div>
        
      </div>
      <!--v-if-->
      
    </div>
  </div>
</body>
`;

exports[`EcRadioBtn focus should be focused 2`] = `
<div
  class="ec-radio-btn__radio-icon-wrapper ec-radio-btn__radio-icon-wrapper--focused"
  data-test="ec-radio-btn__radio-icon-wrapper ec-radio-btn__radio-icon-wrapper-0"
>
  <div
    class="ec-radio-btn__radio-icon-wrapper-inner"
  >
    <svg
      class="ec-icon ec-radio-btn__radio-icon"
      height="20"
      width="20"
    >
      <use
        xlink:href="#ec-rounded-notification"
      />
    </svg>
  </div>
</div>
`;

exports[`EcRadioBtn focus should be not focused 1`] = `
<body>
  <div>
    <div
      data-v-app=""
    />
  </div>
  <div>
    <div
      data-v-app=""
    />
  </div>
  <div>
    <div
      data-v-app=""
    >
      
      <!--v-if-->
      <div
        class="ec-radio-btn__group"
        data-test="ec-radio-btn__group"
      >
        
        <div
          class="ec-radio-btn"
          data-test="ec-radio-btn ec-radio-btn-0"
        >
          <input
            aria-describedby=""
            class="ec-radio-btn__input"
            data-test="ec-radio-btn__input ec-radio-btn__input-0"
            id="ec-radio-btn-1"
            name="ec-radio-btn-1"
            type="radio"
            value=""
          />
          <div
            class="ec-radio-btn__wrapper"
          >
            <div
              class="ec-radio-btn__radio-icon-wrapper"
              data-test="ec-radio-btn__radio-icon-wrapper ec-radio-btn__radio-icon-wrapper-0"
            >
              <div
                class="ec-radio-btn__radio-icon-wrapper-inner"
              >
                <svg
                  class="ec-icon ec-radio-btn__radio-icon"
                  height="20"
                  width="20"
                >
                  <use
                    xlink:href="#ec-rounded-notification"
                  />
                </svg>
              </div>
            </div>
            <div
              class="ec-radio-btn__radio-text-wrapper"
              data-test="ec-radio-btn__radio-text-wrapper"
            >
              <label
                class="ec-radio-btn__radio-label"
                data-test="ec-radio-btn__radio-label ec-radio-btn__radio-label-0"
                for="ec-radio-btn-1"
              >
                Yes
              </label>
              <!--v-if-->
            </div>
          </div>
        </div>
        <div
          class="ec-radio-btn tw-mt-16"
          data-test="ec-radio-btn ec-radio-btn-1"
        >
          <input
            aria-describedby=""
            class="ec-radio-btn__input"
            data-test="ec-radio-btn__input ec-radio-btn__input-1"
            id="ec-radio-btn-1"
            name="ec-radio-btn-1"
            type="radio"
            value=""
          />
          <div
            class="ec-radio-btn__wrapper"
          >
            <div
              class="ec-radio-btn__radio-icon-wrapper"
              data-test="ec-radio-btn__radio-icon-wrapper ec-radio-btn__radio-icon-wrapper-1"
            >
              <div
                class="ec-radio-btn__radio-icon-wrapper-inner"
              >
                <svg
                  class="ec-icon ec-radio-btn__radio-icon"
                  height="20"
                  width="20"
                >
                  <use
                    xlink:href="#ec-rounded-notification"
                  />
                </svg>
              </div>
            </div>
            <div
              class="ec-radio-btn__radio-text-wrapper"
              data-test="ec-radio-btn__radio-text-wrapper"
            >
              <label
                class="ec-radio-btn__radio-label"
                data-test="ec-radio-btn__radio-label ec-radio-btn__radio-label-1"
                for="ec-radio-btn-1"
              >
                No
              </label>
              <!--v-if-->
            </div>
          </div>
        </div>
        
      </div>
      <!--v-if-->
      
    </div>
  </div>
</body>
`;

exports[`EcRadioBtn focus should be not focused 2`] = `
<div
  class="ec-radio-btn__radio-icon-wrapper"
  data-test="ec-radio-btn__radio-icon-wrapper ec-radio-btn__radio-icon-wrapper-0"
>
  <div
    class="ec-radio-btn__radio-icon-wrapper-inner"
  >
    <svg
      class="ec-icon ec-radio-btn__radio-icon"
      height="20"
      width="20"
    >
      <use
        xlink:href="#ec-rounded-notification"
      />
    </svg>
  </div>
</div>
`;

exports[`EcRadioBtn should have a "name" attribute equal to the "for" attribute 1`] = `
DOMWrapper {
  "isDisabled": [Function],
  "wrapperElement": <div
    class="ec-radio-btn"
    data-test="ec-radio-btn ec-radio-btn-0"
  >
    <input
      aria-describedby=""
      class="ec-radio-btn__input"
      data-test="ec-radio-btn__input ec-radio-btn__input-0"
      id="ec-radio-btn-1"
      name="ec-radio-btn-1"
      type="radio"
      value=""
    />
    <div
      class="ec-radio-btn__wrapper"
    >
      <div
        class="ec-radio-btn__radio-icon-wrapper"
        data-test="ec-radio-btn__radio-icon-wrapper ec-radio-btn__radio-icon-wrapper-0"
      >
        <div
          class="ec-radio-btn__radio-icon-wrapper-inner"
        >
          <svg
            class="ec-icon ec-radio-btn__radio-icon"
            height="20"
            width="20"
          >
            <use
              xlink:href="#ec-rounded-notification"
            />
          </svg>
        </div>
      </div>
      <div
        class="ec-radio-btn__radio-text-wrapper"
        data-test="ec-radio-btn__radio-text-wrapper"
      >
        <label
          class="ec-radio-btn__radio-label"
          data-test="ec-radio-btn__radio-label ec-radio-btn__radio-label-0"
          for="ec-radio-btn-1"
        >
          Yes
        </label>
        <!--v-if-->
      </div>
    </div>
  </div>,
}
`;
